--- a/index_config.yaml
+++ b/index_config.yaml
@@ -203,6 +203,7 @@ blocks:
       - Python 数据结构
       - PHP面试问答
       - Python进阶
+      - C/C++ 技术面试基础知识总结
   - topic: Web前端
     books:
       - CSS3教程
