--- a/books/koa2-note.yaml
+++ b/books/koa2-note.yaml
@@ -13,7 +13,7 @@ repository: chenshenhai/koa2-note
 # 技术教程所在的 git 仓库地址目录
 # shiyanlou/library 下的技术教程需要指定教程章节内容所在的目录名称
 # 而如果作者的技术教程拥有自己的仓库，则填写 "/" 即可
-repository_dir: 
+repository_dir: /
 # 作者信息
 # 如果同一作者拥有多个技术教程，所有教程的作者配置信息应一致
 author:
