--- a/index_config.yaml
+++ b/index_config.yaml
@@ -216,6 +216,7 @@ blocks:
       - ECMAScript 6入门
       - Redux简明教程
       - Redux中文文档
+      - React 学习之道
       - Koa2进阶学习笔记
   - topic: Linux运维
     books:
